--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.3.0",
     "@eslint/js": "^9.19.0",
     "@types/numeral": "^2.0.5",
     "@types/react": "^19.0.8",
