--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:ui": "cypress open",
+    "test": "cypress run"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
@@ -17,6 +19,7 @@
     "antd": "^5.24.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.3",
     "motion": "^12.4.2",
     "numeral": "^2.0.6",
